# HealthCheck_Threshold_eval

./: .gitignore  README.md  eval_bp_v0.txt  eval_fpg_v0.txt  make_bp_glu_subset.py  pyproject.toml  run_llm.py  run_rag.py
data/raw/corpus/: chunks_healthcheck.jsonl  chunks_healthcheck_bp_glu.jsonl
outputs/llm_only/: sample_run_llm.json
outputs/rag/: full_50_eval.json  full_50_eval_v2.json  full_50_eval_v3.json  glu_smoke_test.json  mixed_debug.json  mixed_debug_v2.json  mixed_debug_v3.json  overall_debug.json  overall_debug_v2.json  overall_debug_v3.json  sample_run_rag.json
prompts/: llm_only.txt  rag.txt
src/: config.py  schemas.py
src/agent/: answer_generator.py  evidence_selector.py  query_classifier.py  safety_checker.py  schemas.py  simple_rag_agent.py  threshold_interpreter.py  v3_retriever_adapter.py
src/generator/: client.py
src/loaders/: corpus_loader.py  excel_loader.py
src/pipelines/: llm_only_pipeline.py  rag_pipeline.py
src/retriever/: embedder.py  reranker.py  search.py
tests/: eval_fpg_v0.txt  test_00_schemas.py  test_01_query_classifier.py  test_02_evidence_selector.py  test_03_threshold_interpreter.py  test_04_answer_generator.py  test_05_safety_checker.py  test_06_simple_rag_agent.py  test_07_fpg_evalset.py  test_08_bp_evalset.py
